fix overlapping news (#2192)
* remove margin for paragraphs in list items

* add news content to gitignore

--- a/web/hugothemes/static/css/font.css
+++ b/web/hugothemes/static/css/font.css
@@ -18,7 +18,7 @@ ol, ul {
   margin-top: 1.3em;
 }
 li p {
-    margin-top: -1em;
+    margin: 0;
 }
 
 /* open-sans-regular - latin-ext_latin */
